# google_notify

./: .coderrabit.yaml  .gitignore  README.md  eslint.config.js  package.json  vite.config.ts
.github/workflows/: release.yaml  unit-tests.yaml
docs/: api.md  architecture.md  oauth-flow.md  setup.md
scripts/: generate-update-json.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: login.rs  mod.rs  refresh_token.rs
src-tauri/src/oauth/: google.rs
src-tauri/tests/: updater_check.rs
src/__tests__/: ClassroomCard.test.tsx  Loading.test.tsx  google.test.ts  index.test.tsx  setup.ts  use-chat.test.ts  use-profile.test.ts  utils.test.ts
src/__tests__/components/: App.test.tsx  ChatCard.test.tsx  ClassroomCard.test.tsx  Loading.test.tsx  Modal.test.tsx  index.test.tsx  session.test.tsx
src/__tests__/hooks/: use-chat.test.ts  use-classroom.test.ts  use-profile.test.ts
src/__tests__/lib/: google.test.ts
src/__tests__/utils/: utils.test.ts
src/app/: index.tsx
src/components/layout/: layout.tsx
src/components/provider/: session.tsx  utils.tsx
src/components/screen/: loading.tsx
src/components/ui/: modal.tsx  update-dialog.tsx
src/components/unread/: chat-card.tsx  (+2 more)
src/config/: routes.tsx
src/constants/: member.ts
src/hooks/: use-chat.ts  use-classroom.ts  use-profile.ts
src/lib/: google.ts
src/styles/: index.module.css  modal.module.css  session.module.css
src/types/: auth.ts  chat.ts  classroom.ts  google.ts
