[package]
name = "Google_Notify"
version = "0.1.0"
description = "Google Notify is a desktop application that provides notifications for Google services. It is built using Rust and Tauri, and it allows users to stay informed about important updates from their Google accounts."
authors = ["tanahiro2010 <herentongkegu087@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "google_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv-build = "0.1.1"

[dependencies]
rand = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-oauth = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
dotenvy = "0.15"
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-fs = "2.5.1"
sha2 = "0.10"
base64 = "0.22"

